# linkevagas

./: .gitignore  LICENSE  LinkeVagas.vbs  README.md  linkedin_session.json  main.py  pyproject.toml
gui/: __init__.py  app.py  env_manager.py  main.py  process_manager.py  theme.py
gui/components/: __init__.py  config_panel.py  control_panel.py  log_viewer.py  pipeline_view.py  session_panel.py
src/agents/: agent.py
src/tools/: __init__.py  ats_tool.py  cv_tool.py  github_tool.py  playwright_tool.py  tracking.py
src/utils/: format_output.py
