[project]
name = "linkevagas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "src"}]
dependencies = [
    "agno>=2.5.8",
    "google-genai>=1.67.0",
    "ipython>=9.11.0",
    "keybert>=0.9.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "markdown>=3.10.2",
    "markdown-pdf>=1.13.1",
    "markitdown[all]>=0.1.5",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pdf2docx>=0.5.11",
    "playwright>=1.58.0",
    "pypdf>=6.8.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "skillner>=1.0.3",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "weasyprint>=68.1",
]
